# libusermetrics

./: CMakeLists.txt
click-hooks/: CMakeLists.txt  infographic-service-source.click-hook.in  infographic-service-visualization.click-hook.in  visualizers-update.c
cmake/: FindValgrind.cmake  Plugins.cmake
data/: CMakeLists.txt  com.canonical.Infographics.conf  com.canonical.Infographics.service.in  com.canonical.Infographics.xml  default.json.in  infographic-service.conf.in  usermetricsservice.conf.in
debian/: changelog  control  libusermetricsinput1.symbols  libusermetricsoutput1.symbols  qtdeclarative5-infographics0.1.install  rules  usermetricsservice.infographic.click-hook  usermetricsservice.install  usermetricsservice.postinst  usermetricsservice.preinst  usermetricsservice.usermetrics.click-hook
doc/: mainpage.md
include/libusermetricsinput/: MetricParameters.h
include/libusermetricsoutput/: InfographicList.h
po/: en_GB.po  libusermetrics.pot  pl.po  zh_CN.po
src/: CMakeLists.txt
src/click-hooks/: CMakeLists.txt  usermetrics-source.click-hook.in  usermetrics-visualization.click-hook.in
src/infographic/: CMakeLists.txt  Infographic.cpp  Infographic.h  main.cpp
src/infographicservice/: CMakeLists.txt  Service.cpp  Service.h  main.cpp
src/libusermetricscommon/: CMakeLists.txt  DBusPaths.h  FileUtils.cpp  FileUtils.h
src/libusermetricsinput/: CMakeLists.txt  Factory.cpp  Factory.h  Metric.h  MetricImpl.cpp  MetricImpl.h  MetricManager.cpp  MetricManager.h  MetricManagerImpl.cpp  MetricManagerImpl.h  MetricParameters.cpp  MetricParameters.h  MetricUpdate.h  MetricUpdateImpl.cpp  MetricUpdateImpl.h  usermetricsinput.cpp
src/libusermetricsoutput/: CMakeLists.txt  ColorThemeProvider.h  DirectoryWatcher.cpp  DirectoryWatcher.h  InfographicList.cpp  InfographicList.h  InfographicListImpl.cpp  InfographicListImpl.h  UserMetrics.cpp  UserMetricsImpl.cpp  UserMetricsStore.h
src/modules/: CMakeLists.txt
src/modules/Infographics/: CMakeLists.txt  Components.cpp  Components.h  qmldir
src/modules/UserMetrics/: CMakeLists.txt
src/usermetricsservice/: CMakeLists.txt  DBusDataSet.cpp  DBusDataSource.cpp  DBusUserData.cpp  Executor.cpp  Executor.h  Factory.cpp  Factory.h  FileUtils.cpp  FileUtils.h  Infographic.cpp  Infographic.h  InfographicFile.cpp  InfographicFile.h  InfographicFileImpl.cpp  InfographicFileImpl.h  InfographicImpl.cpp  InfographicImpl.h  QProcessExecutor.cpp  QProcessExecutor.h  ResultTransport.cpp  ResultTransport.h  ResultTransportImpl.cpp  ResultTransportImpl.h  Service.cpp  Service.h  ServiceImpl.cpp  ServiceImpl.h  SourceDirectory.cpp  SourceDirectory.h  SourceDirectoryImpl.cpp  SourceDirectoryImpl.h  aa-exec.cpp  main.cpp
tests/: CMakeLists.txt
tests/data/: valgrind.suppression
tests/data/infographics/: test-aggregate.json  test-iterate.json
tests/testutils/: CMakeLists.txt  main.cpp
tests/unit/libusermetricsinput/: CMakeLists.txt  Mocks.h  TestMetricImpl.cpp  TestMetricManagerImpl.cpp  TestUserMetricInputCAPI.cpp
tests/unit/libusermetricsoutput/: CMakeLists.txt  TestInfographicListImpl.cpp
tests/unit/qml/: CMakeLists.txt  tst_Metrics.qml
tests/unit/qml/UserMetricsTest/: DBusQuery.cpp  DBusQuery.h  TestPlugin.cpp
tests/unit/usermetricsservice/: CMakeLists.txt  Mocks.h  TestInfographicImpl.cpp  TestServiceImpl.cpp  TestUserMetricsService.cpp
utils/: CMakeLists.txt  helper-exec-tool.sh
